Melhorando a estrutura do meu site portfólio

--- a/app.html
+++ b/app.html
@@ -24,7 +24,7 @@
      <div class="row height-633">
       <div class="col-lg-2 background-color-menu-lateral">
        <div class="espacamenteo-imagem">
-        <img class="temanho-da-imagem-principal" src="imagens/imagem3.jpg" />
+        <img class="temanho-da-imagem-principal" src="imagens/imagem3.jpg" id="imagem_principal" />
        </div>
        <div class="text-center alinhamento-do-link-principal">
         <a class="color-link-lateral" href="#"> SOBRE MIM </a>
@@ -52,15 +52,18 @@
            Albert Einstein
           </p>
          </div>
-         <div>
-          <a class="icone-redes-sociais" href="#"><i class="fab fa-whatsapp"></i></a>
-          <a class="icone-redes-sociais" href="#"><i class="fab fa-instagram"></i></a>
-          <a class="icone-redes-sociais" href="https://github.com/JhonatanAlbernaz"><i class="fab fa-github"></i></a>
+         <div class="mt-5">
+          <a class="icone-redes-sociais" href="https://web.whatsapp.com/send?phone=5527998444818" target="_blank" ><i class="fab fa-whatsapp" id="icone_fa_whatsapp"></i></a>
+          <a class="icone-redes-sociais" href="https://www.instagram.com/jhonatan_albernaz_1/"><i class="fab fa-instagram" id="icone_fa_instagram"></i></a>
+          <a class="icone-redes-sociais" href="https://github.com/JhonatanAlbernaz"><i class="fab fa-github" id="icone_fa_github"></i></a>
          </div>
         </div>
        </div>
       </div>
      </div>
+
+     <div class="divisor-sobre-mim"></div>
+
     </section>
 
     <!-- Optional JavaScript -->
