Melhorando a estrutura do meu site portfólio

--- a/app.html
+++ b/app.html
@@ -35,7 +35,7 @@
        </div>
       </div>
 
-      <div class="row width-144" id="row_menu_tablet">
+      <div class="row width-144 menu-mobile" id="row_menu_tablet">
         <div class="col-md-6 padding-top-35">
          <div class="menu-tablet" onclick="myFunction(this)" id="menu-responsivo">
           <div class="bar1"></div>
@@ -84,7 +84,7 @@
       </div>
      </div>
 
-     <div class="divisor-sobre-mim" id="divisor_sobre-mim"></div>
+     <div class="divisor-sobre-mim" id="divisor_sobre-mim" id="teste"></div>
 
     </section>
 
