Melhorando a estrutura do meu site portfólio

--- a/app.html
+++ b/app.html
@@ -22,7 +22,7 @@
    
     <section class="container-fluid height-633">
      <div class="row height-633">
-      <div class="col-lg-2 col-md-10 background-color-menu-lateral">
+      <div class="col-lg-2 col-md-10 background-color-menu-lateral height-100">
        <div class="espacamenteo-imagem">
         <img class="temanho-da-imagem-principal" src="imagens/imagem3.jpg" id="imagem_principal" />
        </div>
@@ -45,7 +45,7 @@
         </div>
        </div>
 
-      <div class="col-lg-10">
+      <div class="col-lg-10 overflow-y">
        <div class="container">
         <div class="espacamento-texto-top" id="espancamento_div_top">
          <h1 class="class-texto-top">  JHONATAN <span class="color-blue-sobrenome">  ALBERNAZ DE OLIVEIRA PEREIRA </span></h1>   
@@ -70,8 +70,32 @@
          </div>
         </div>
        </div>
-      </div>
 
+       <div class="divisor-sobre-mim" id="divisor_sobre-mim" id="teste"></div>
+
+       <div class="container height-633">
+        <h1 class="h1-escolaridade"> ESCOLARIDADE </h1>
+        <div class="div-espacamento-escolaridade">
+         <h4 class="curso-mscode"> MS CODE CURSANDO </h4>
+         <p class="tag-p-escolaridade"> 
+          Uma iniciativa Móveis Simonetti em parceria com o Senac Espírito Santo.
+          A Móveis Simonetti idealizou o MS Code: Uma trilha de formação que busca
+          capacitar jovens de 14 a 25 anos de Pinheiros-ES em Desenvolvimento Web.
+         </p>
+
+         <h4 class="curso-mscode margin-top-20"> ESCOLA EEEM NOSSA SENHORA DE LOURDES PINHEIROS / ES </h4>
+         <p class="tag-p-escolaridade"> ENSINO MÉDIO CURSANDO </p>
+
+         <h4 class="curso-mscode margin-top-20"> ESCOLA EMEF GOVERNADOR CARLOS LINDEMBERG PINHEIROS / ES </h4>
+         <p class="tag-p-escolaridade"> ENSINO FUNDAMENTAL COMPLETO </p>
+
+         <h4 class="curso-mscode margin-top-20"> ESCOLA EMEF SÃO JOSÉ DO JUNDIÁ PINHEIROS / ES </h4>
+         <p class="tag-p-escolaridade"> EDUCAÇÃO INFANTIL COMPLETO </p>
+         
+        </div>
+       </div>
+
+      </div>
      </div>
 
      <div class="row conteudo-responsivo" id="conteudo_responsivo_dnone">
@@ -83,9 +107,6 @@
         <a class="color-link-lateral" href="#"> INTERESSES </a>
       </div>
      </div>
-
-     <div class="divisor-sobre-mim" id="divisor_sobre-mim" id="teste"></div>
-
     </section>
 
 
