--- a/app.html
+++ b/app.html
@@ -27,8 +27,8 @@
         <img class="temanho-da-imagem-principal" src="imagens/imagem3.jpg" id="imagem_principal" />
        </div>
        <div class="text-center alinhamento-do-link-principal">
-        <a class="color-link-lateral" href="#"> SOBRE MIM </a>
-        <a class="color-link-lateral" href="#"> ESCOLARIDADE </a>
+        <a class="color-link-lateral" href="#sobre-mim"> SOBRE MIM </a>
+        <a class="color-link-lateral" href="#escolaridade"> ESCOLARIDADE </a>
         <a class="color-link-lateral" href="#"> HOBBIES </a><br>
         <a class="color-link-lateral" href="#"> HABILIDADES </a>
         <a class="color-link-lateral" href="#"> INTERESSES </a>
@@ -45,7 +45,7 @@
         </div>
        </div>
 
-      <div class="col-lg-10 overflow-y">
+      <div class="col-lg-10 overflow-y" >
        <div class="container">
         <div class="espacamento-texto-top" id="espancamento_div_top">
          <h1 class="class-texto-top">  JHONATAN <span class="color-blue-sobrenome">  ALBERNAZ DE OLIVEIRA PEREIRA </span></h1>   
@@ -71,9 +71,9 @@
         </div>
        </div>
 
-       <div class="divisor-sobre-mim" id="divisor_sobre-mim" id="teste"></div>
+       <div class="divisor-sobre-mim" id="divisor_sobre-mim"></div>
 
-       <div class="container height-633">
+       <div class="container height-633" id="escolaridade">
         <h1 class="h1-escolaridade"> ESCOLARIDADE </h1>
         <div class="div-espacamento-escolaridade">
          <h4 class="curso-mscode"> MS CODE CURSANDO </h4>
@@ -93,7 +93,12 @@
          <p class="tag-p-escolaridade"> EDUCAÇÃO INFANTIL COMPLETO </p>
          
         </div>
+
+        <div class="divisor-escolaridade"></div>
+
        </div>
+
+       
 
       </div>
      </div>
