Melhorando a estrutura do meu site portfólio

--- a/app.html
+++ b/app.html
@@ -98,6 +98,25 @@
 
        </div>
 
+       <div class="container height-633">
+        <div class="margin-left-50">
+         <h1 class="titulo-hobbies"> HOBBIES </h1>
+         <div id="mySidenav" class="sidenav">
+          <a href="#" id="about"> Filmes </a>
+          <a href="#" id="blog"> Estudar </a>
+          <a href="#" id="projects"> Assistir videos no YouTube </a>
+          <a href="#" id="contact"> Ouvir músicas </a>
+          <a href="#" id="pray"> Orar </a>
+          <a href="#" id="Physical"> Atividade Física </a>
+          <a href="#" id="schedule"> Programar </a>
+          <a href="#" id="Bible"> Ler a bíblia </a>
+          <a href="#" id="mom"> Ajudar minha mãe </a>
+          <a href="#" id="family"> Comer pizza com a família </a>
+          <a href="#" id="church"> Ir a igreja </a>
+        </div>
+        </div>
+       </div>
+
        
 
       </div>
