--- a/app.html
+++ b/app.html
@@ -113,11 +113,31 @@
           <a href="#" id="mom"> Ajudar minha mãe </a>
           <a href="#" id="family"> Comer pizza com a família </a>
           <a href="#" id="church"> Ir a igreja </a>
-        </div>
+         </div>
         </div>
        </div>
 
-       
+       <div class="divisor-hobbies"></div>
+
+       <div class="container height-633">
+        <div class="margin-left-50">
+         <h1 class="titulo-habilidades"> HABILIDADES </h1>
+         <div class="margin-top-70">
+          <h5 class="subtitulo-habilidades"> LINGUAGENS DE PROGRAMAÇÃO </h5>
+          <i class="fab fa-html5 icone-linguagem-programacao" id="html5"></i>
+          <i class="fab fa-css3-alt icone-linguagem-programacao" id="css"></i>
+          <i class="fab fa-js-square icone-linguagem-programacao" id="js"></i>
+         </div>
+         <div>
+          <h6><b> HTML5 </b></h6>
+          <span class="counter numero-animation" data-count="236029663"> 231,713,000 </span>
+          <h6><b> CSS </b></h6>
+          <span class="counter numero-animation" data-count="236029663"> 231,713,000 </span>
+          <h6><b> JavaScript </b></h6>
+          <span class="counter numero-animation" data-count="236029663"> 231,713,000 </span>
+         </div>
+        </div>
+       </div>
 
       </div>
      </div>
@@ -137,6 +157,7 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="js/app.js"></script>
